src/objects/Course_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Courses_Accounts</relationshipLabel>
        <relationshipName>Courses_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Courses_Accounts</relationshipLabel>
        <relationshipName>Courses_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(YEAR( Start_Date__c )) + &apos;-&apos; + TEXT(YEAR( Start_Date__c )+1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Course_Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Course_Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses_Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>